--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-router-dom": "^7.11.0",
+    "lucide-react": "0.460.0",
+    "react": "18.2.0",
     "react-dom": "^19.2.3",
-    "@supabase/supabase-js": "^2.89.0"
+    "react-router-dom": "6.20.0",
+    "@supabase/supabase-js": "2.39.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
